--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.9.4",
     "next": "13.4.12",
     "next-auth": "^4.22.5",
+    "next-cloudinary": "^4.18.0",
     "postcss": "8.4.27",
     "prisma": "^5.1.1",
     "query-string": "^8.1.0",
