--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "leaflet": "^1.9.4",
-    "next": "13.4.12",
+    "next": "^13.4.19",
     "next-auth": "^4.22.5",
     "next-cloudinary": "^4.18.0",
     "postcss": "8.4.27",
