--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "gsap": "^3.12.2",
     "leaflet": "^1.9.4",
     "next": "^13.4.19",
     "next-auth": "^4.22.5",
